--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
-  "name": "involves-changelog-graphql",
-  "version": "0.1.1",
+  "name": "involves-changelog-serve",
+  "version": "0.2.0",
   "main": "src",
   "scripts": {
-    "start": "node ./bin/www",
     "eslint": "eslint . --ext .js",
     "create:env-file": "node bin/create-env-file"
+  },
+  "bin": {
+    "involves-changelog-server": "bin/serve"
   },
   "dependencies": {
     "@koa/cors": "^2.2.1",
     "bluebird": "^3.5.1",
     "debug": "^3.1.0",
     "debuggler": "^1.0.0",
-    "dotenv": "^5.0.1",
+    "dotenv": "^6.0.0",
     "graphql": "^0.13.2",
     "graphql-compose": "^4.3.0",
     "graphql-compose-connection": "^3.0.1",
     "graphql-compose-mongoose": "^4.1.1",
-    "graphql-compose-pagination": "^3.0.1",
-    "involves-changelog-store": "^0.2.0",
+    "graphql-compose-pagination": "^3.1.0",
+    "involves-changelog": "^0.3.7",
+    "involves-changelog-store": "^0.2.7",
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.1",
     "koa-graphql": "^0.7.5",
     "koa-helmet": "^4.0.0",
     "koa-morgan": "^1.0.1",
-    "koa-mount": "^3.0.0",
-    "mongoose": "^5.1.3",
+    "koa-router": "^7.4.0",
+    "minimist": "^1.2.0",
+    "mongoose": "^5.1.4",
     "split": "^1.0.1",
     "winston": "^2.4.2"
   },
