--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "involves-changelog-server",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "main": "src",
   "scripts": {
+    "start": "node bin/serve",
     "eslint": "eslint . --ext .js",
     "create:env-file": "node bin/create-env-file"
   },
